# jrmylow.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  Containerfile  Gemfile  LICENSE.md  Makefile  README.md  TODO.md  _config.yml  about.md  contact.md  essays.md  index.md  main.py  pyproject.toml  scripts.sh
_doc/: TODO.md  analytics.md  card_guide.md
_documentation/: analytics.md  container.md  install_check.sh  page.md  scripts.sh  styling.md  testing.md  workflow.md
_drafts/: test_page.md
_includes/: footer.html  head.html  header.html  related.html  sidebar.html  tags.html
_layouts/: blogpost.html  default.html  index.html  post.html
_pages/: 404.md  about.md  contact.md  essays.md  index.md  tags.md
_posts/: 2020-04-12-post1.md  2020-04-12-post2.md  2025-01-01-post1.md  2025-02-02-post1.md
_tests/: conftest.py  constants.py  discovery.py  test_analytics.py  test_cards.py  test_hamburger.py  test_navigation.py  test_pagination.py  test_performance.py  test_post_card.py  test_previews.py  test_search.py  test_tags.py  test_theme_colours.py  test_theme_flash.py  test_theme_toggle.py  test_typography.py
_tmp/: about.md  contact.md  essays.md  index.md
doc/: TODO.md  card_guide.md
docs/: _config.yml  search-index.json
docs/_drafts/: test_page copy 10.md
docs/_includes/: head.html  post_card.html  related.html  sidebar.html  tags.html
docs/_layouts/: default.html  essays.html  index.html  search.html  tags.html
docs/_pages/: about.md  contact.md  essays.md  index.md  search.md  tags.md
tests/: test_cards.py  test_hamburger.py
(+20 files in other folders)
