[project]
name = "jrmylow-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
base_url = "http://localhost:4000"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []
